# social_agent_simulation_platform

./: .envrc  .gitignore  .gitmodules  PROPOSED_UI.md  README.md  checklist.md  dev_requirements.in  dev_requirements.txt  main.py  pyproject.toml  requirements.in  requirements.txt  ruff.toml  spec.md
.github/: ci.yml
.github/workflows/: ci.yml
agent/: agent.py  agent_manager.py  initialize_agents.py  llm.py  models.py
agent/tests/: test_agent.py  test_agent_manager.py  test_initialize_agents.py
ai/: agents.py  create_initial_agents.py
app/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  trace
app/app/: globals.css  layout.tsx  page.tsx
app/planning/: 01_oasis_platform_research.md  02_business_applications_coo_perspective.md  03_cmo_marketing_positioning.md  04_viewpoints_ai_marketing_analysis.md  05_website_design_master_marketer.md  06_master_designer_review.md  07_technical_implementation_plan.md  08_final_deliverables_summary.md
architecture/: 1_v1_design.md
config/: config_loader.py  models.py
db/: adapters.py  db.py  db.sqlite  exceptions.py  models.py  repository.py
db/adapters/: __init__.py  base.py
db/repositories/: __init__.py  feed_post_repository.py  generated_bio_repository.py  generated_feed_repository.py  profile_repository.py  run_repository.py
feeds/: algorithms.py  build_feeds.py  candidate_generation.py  feed_generator.py  models.py
jobs/: create_initial_agents.py  generate_profile_bios.py  initialize_agents.py  load_initial_bluesky_profiles.py  view_database.py  view_generated_bios.py  view_generated_feeds.py
lib/: bluesky_client.py  env_vars.py  helper.py  langfuse_telemetry.py  utils.py
memory/: memory_manager.py  models.py
planning/: 1_agent_initialization_and_management_planning.md  2_round_simulation_logic_planning.md  3_ui_first_pass_planning.md  4_ui_backend_connection_planning.md  FORMAT.md
progress_updates/: 1_agent_initialization_and_management.md  2_round_simulation_logic.md  3_ui_first_pass.md  4_ui_backend_connection.md  FORMAT.md
rules/: RULES.md  UI_PRINCIPLES.md
simulation/: README.md  __init__.py  agent_session.py  constants.py  default_posts.py  main.py  models.py  simulation_manager.py
simulation/core/: __init__.py  engine.py  exceptions.py  models.py
tests/: README.md  __init__.py
tests/db/: __init__.py
tests/feeds/: __init__.py  test_feed_generator.py
ui/: README.md  app.py  package.json
(+93 files in other folders)
