[project]
name = "agent-simulation-platform"
version = "0.1.0"
description = "Social Media AI Agent Simulation Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation"]

