[project]
name = "agent-simulation-platform"
version = "0.1.0"
description = "Social Media AI Agent Simulation Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atproto>=0.0.63",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation"]

